--- a/css/styles.css
+++ b/css/styles.css
@@ -89,25 +89,22 @@ li {
     display: inline-block;
     width: 50%;
     float: left;
+    height: 500px;
 }
 
 .vitrina__banner img {
     width: 100%;
-    height: 100%;
+    height: inherit;
 }
 
 .vitrina___coleccion {
     display: inline-block;
-    height: 300px;
     width: 50%;
+    height: 500px;
 }
 
 .vitrina___coleccion {
     background: yellow;
-}
-
-.vitrina___coleccion_1 {
-    background-color: yellow;
 }
 
 
@@ -115,6 +112,7 @@ li {
 
 .footer {
     width: 100%;
+    position: relative;
 }
 
 .footer__content {
@@ -130,9 +128,23 @@ li {
 .footer_colum1 {
     width: 40%;
     padding: 10px;
-    display: inline-block;
-    float: left;
+    margin-left: 10px;
+    margin-right: 10px;
     background-color: white;
+}
+
+.footer_colum2 {
+    width: 35%;
+    padding: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+.footer_colum2 {
+    width: auto;
+    padding: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 .footer_colum1 h3 {
@@ -140,9 +152,18 @@ li {
     font-size: 17px;
 }
 
-.footer_colum2 {
-    width: 30%;
-    display: inline-block;
+.terminos__footer {
+    display: block;
+}
+
+.textolegal__footer {
+    width: 350px;
+    font-size: 11px;
+    color: #8b8b8b;
+}
+
+.terminos__footer a {
+    color: #8b8b8b;
 }
 
 .footer__menu {
@@ -159,12 +180,6 @@ li {
     text-decoration: none;
 }
 
-.footer_colum3 {
-    width: auto;
-    display: inline-block;
-    float: right;
-}
-
 .footer__imgMediopago {
     width: 100%;
 }
@@ -173,4 +188,10 @@ li {
     width: 100%;
     background: #152047;
     align-items: center;
+}
+
+.conten__downbanner {
+    display: flex;
+    justify-content: center;
+    padding: 15px 10%;
 }
