--- a/css/styles.css
+++ b/css/styles.css
@@ -140,8 +140,8 @@ li {
     margin-right: 10px;
 }
 
-.footer_colum2 {
-    width: auto;
+.footer_colum3 {
+    width: 15%;
     padding: 10px;
     margin-left: 10px;
     margin-right: 10px;
